--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: #f9f9f9;
+  background-color: #f9f9f9e2;
   width: 100%;
   height: 100vh;
-  padding-top: 80px;
+  padding-bottom: 3660px;
 }
 
 * {
@@ -25,6 +25,7 @@ body {
 }
 
 .navbar {
+  margin-top: 20px;
   border-radius: 5px;
   background-color: white;
   display: flex;
@@ -165,4 +166,181 @@ li {
   100% {
     box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
   }
+}
+
+.list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.list_item {
+  list-style: circle;
+}
+.discription {
+  width: 1420px;
+  height: 1px;
+  background-color: #acacac;
+  margin-top: 10px;
+}
+
+/* MAIN */
+main {
+  margin-top: 25px;
+}
+.songiYangiliklar_wrapper {
+  display: flex;
+  gap: 10px;
+}
+.left_right_wrapper {
+  display: flex;
+  gap: 50px;
+}
+.right_reklama_heading {
+  width: 227px;
+  font-size: 21px;
+  color: #252729;
+  margin-left: 10px;
+}
+.uzbekistan_img_Wrapper {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+.item_heading {
+  width: 138.8px;
+  font-size: 14px;
+  color: #161616;
+  margin-top: 10px;
+}
+.daryo_news {
+  margin-top: 40px;
+}
+.daryo_heading {
+  font-size: 16px;
+}
+.daryo_discription {
+  width: 770px;
+  height: 1px;
+  background-color: #444;
+  margin-top: 13px;
+  margin-bottom: 25px;
+}
+.two_card_wrapper {
+  display: flex;
+  gap: 35px;
+}
+.left_card_wrapper {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+.text_heading {
+  width: 257px;
+}
+.right__heading {
+  width: 367px;
+  margin-top: 10px;
+  font-size: 17px;
+}
+.right__p_kecha {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 10px;
+  color: #212121;
+}
+.right_yilning_p {
+  width: 367px;
+  font-size: 14px;
+  color: #505050;
+}
+.right_ {
+  margin-top: 50px;
+}
+.songi_habarlar_btn {
+  width: 770px;
+  background-color: #008ccc;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+/*  */
+.right_tavsiya_etamiz {
+  margin-top: 50px;
+  font-size: 16px;
+}
+.right_discription {
+  width: 336px;
+  height: 1px;
+  background-color: #acacac;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.tavsiyaetamiz_div {
+  display: flex;
+  gap: 10px;
+}
+.tavsiyaetamiz_heading {
+  width: 266px;
+  margin-bottom: 20px;
+}
+.img {
+  margin-top: 20px;
+  border-radius: 10px;
+}
+.gvardiola_h {
+  width: 336px;
+  font-size: 17px;
+}
+
+.gvr_span {
+  font-size: 10px;
+  color: #212121;
+  text-transform: uppercase;
+}
+.tavsiya_span {
+  font-size: 10px;
+  color: #212121;
+  margin-top: 5px;
+}
+.img-r {
+  border-radius: 10px;
+}
+.oval {
+  width: 30px;
+  height: 30px;
+  background-color: #008ccc;
+  border-radius: 50%;
+  color: white;
+  font-size: 22px;
+  padding-left: 8px;
+  margin-top: 15px;
+}
+.sss {
+  width: 292px;
+  margin-top: 10px;
+}
+.sicial_item {
+  width: 38px;
+  height: 38px;
+}
+.social_w {
+  display: flex;
+  gap: 10px;
+}
+.footer {
+  background-color: #161616e7;
+  color: white;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 100px;
+}
+.logo {
+  width: 182px;
+}
+.parar {
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 1188px;
 }
